# cycling-trip-planner-agent

./: .env.example  .gcloudignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
data/corridors/: algarve-coast.yaml  ams-cph.yaml  amsterdam-berlin.yaml  berlin-copenhagen.yaml  berlin-usedom.yaml  c2c-whitehaven-tynemouth.yaml  camino-del-norte.yaml  costa-brava.yaml  danube-passau-vienna.yaml  danube-vienna-budapest.yaml  eurovelo-15-rhine.yaml  hebridean-way.yaml  ldn-bri.yaml  ldn-par.yaml  lejog.yaml  lf-kustroute.yaml  loire-a-velo.yaml  paris-lyon.yaml  prague-vienna.yaml  sicily-loop.yaml  velodyssee.yaml  venice-florence.yaml  way-of-the-roses.yaml
docs/: agent-loop.md  architecture.md  conversation-state.md  decisions.md  eval-results.md  tool-design.md
scripts/: fetch_corridor_pois.py  generate_phase2_corridors.py  smoke_d_bonus_tools.py  smoke_named_variants.py  smoke_places.py  smoke_test.py
src/agent/: __init__.py  caching.py  config.py  orchestrator.py  prompts.py  state.py  streaming.py
src/api/: auth.py  dependencies.py  main.py  routes.py
src/db/: __init__.py  engine.py  models.py  seed.py
src/sessions/: __init__.py  postgres_store.py  profile_store.py  store.py
src/tools/: __init__.py  accommodation.py  base.py  budget.py  corridor_registry.py  critique.py  elevation.py  ferry.py  places_real.py  (+6 more)
tests/: conftest.py  test_agent.py  test_api.py  test_critique.py  test_evals.py  test_geocoding.py  test_open_meteo.py  test_profile.py  test_route_gpx.py  test_sessions.py  test_tools.py
web/: package-lock.json  package.json
(+50 files in other folders)
